# pole-sport-parser

./: .gitignore  README.md  build_search_index.py  combine-images.py  constants.py  extract_pdf.py  normalize_elements.py  normalize_images.py  parse.py  pyproject.toml
data/elements/: F1.json
