[project]
name = "code-of-points-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
requires-python = ">=3.12"
dependencies = [
    "camelot-py[base] (>=1.0.9,<2.0.0)",
    "excalibur-py (>=1.0.1,<2.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
